src/test/ui/issues/50000-59999/issue-51022.rs
fn main<'a>() { }
    //~^ ERROR `main` function is not allowed to have generic parameters [E0131]
